[#121325] Stop backdated journals after cutoff
Set up a model where an administrator can create a cutoff date that will
prevent journal backdating into the previous month.

For example, if the cutoff is March 3, then up until March 3 at 4:45pm
you can still journal in February. After that time, you can only journal
for March 1 forward.

Only global administrators have the ability to edit these cutoffs.

--- a/app/assets/stylesheets/nucore.scss
+++ b/app/assets/stylesheets/nucore.scss
@@ -242,6 +242,12 @@ th.currency {
   }
 }
 
+.table {
+  tr.row-warning td {
+    background-color: $errorBackground;
+  }
+}
+
 .table .super-th {
   text-align: center;
 }
